# vuemorphic

./: .gitignore  Modelfile.14b  README.md  idiom_dictionary.md  mkdocs.yml  myopex.scenarios.ts  oxidant-logo-neon.html  package-lock.json  package.json  pyproject.toml  review_queue.json  serve.sh  vuemorphic.config.json
.github/workflows/: docs.yml
.myopex-oxidant/aborted/: fingerprint-aborted.yaml
.myopex-oxidant/complete/: fingerprint-complete.yaml
.myopex-oxidant/idle/: fingerprint-idle.yaml
.myopex-oxidant/paused/: fingerprint-paused.yaml
.myopex-oxidant/running/: fingerprint-running.yaml
.ui-audit/: fingerprint-idle.yaml
compare/: README.md  compare.py  react-harness.html  screens.json
docs/: ARCHITECTURE.md  OXIDANT_PRD.md  RESEARCH_ACADEMIC.md  RESEARCH_SUMMARY.md  index.html  overnight-run.md
gui/: index.html  myopex.scenarios.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
gui/src/: App.vue  (+4 more)
phase_a_scripts/: detect_idioms.ts  extract_ast.ts  tsconfig.json
scripts/: clean-session-artifacts.sh
site/: 404.html  index.html  sitemap.xml
tests/: conftest.py  test_assemble.py  test_categorize.py  test_classify_tiers.py  test_cli_commands.py  test_cli_phase_a.py  test_clippy_runner.py  test_context.py  test_context_progressive.py  test_detect_idioms.py  test_extract_ast.py  test_generate_skeleton.py  test_graph_nodes.py  test_integration_debug.py  test_invoke.py  test_manifest.py  test_manifest_phase_b.py  test_phase_b_failure_diagnosis.py  test_phase_c.py  test_serve_endpoints.py  test_verify.py  test_wal_safety.py
(+163 files in other folders)
