[project]
name = "vuemorphic"
version = "0.1.0"
description = "Agentic harness for automated React-to-Vue translation using LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=1.6",
    "langgraph-checkpoint-sqlite>=0.2",
    "sqlmodel>=0.0.21",
    "pillow>=10.0",
    "numpy>=1.26",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "httpx>=0.27",
]
docs = [
    "mkdocs-material>=9.5",
]

[project.scripts]
vuemorphic = "vuemorphic.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vuemorphic"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
